# interview-agents-rag-ai

./: README.md
common/: README.md
common/eval/: README.md
docs/: README.md
projects/: README.md
projects/01_rag_baseline_broken/: README.md  api.py  chunking.py  ingest.py  prompts.py  pyproject.toml  rag_chain.py  retriever.py  vectorstore.py
projects/01_rag_baseline_broken/data/sample_docs/: company_handbook.txt
projects/01_rag_baseline_broken/tests/: test_ingest.py  test_vectorstore.py
projects/02_agent_router_langgraph/: README.md  graph.py  policies.py  pyproject.toml  state.py
projects/02_agent_router_langgraph/tests/: test_routing.py
projects/02_agent_router_langgraph/tools/: docs_search.py  finance.py  weather.py
projects/03_prod_ready_observability/: README.md  pyproject.toml
projects/03_prod_ready_observability/eval/: regression.py
projects/03_prod_ready_observability/infra/: docker-compose.yaml
projects/03_prod_ready_observability/reliability/: cache.py  retry.py
projects/03_prod_ready_observability/service/: dependencies.py  main.py  routes.py
projects/03_prod_ready_observability/tests/: test_api.py
projects/04_graph_rag_diagnostics/: README.md  pyproject.toml
projects/04_graph_rag_diagnostics/answer/: synthesizer.py
projects/04_graph_rag_diagnostics/data/: sample.txt
projects/04_graph_rag_diagnostics/ingest/: build_graph.py
projects/05_multimodal_validation_feedback/: README.md  pyproject.toml
projects/06_mcp_fastapi_observability/: README.md  pyproject.toml
scripts/: README.md
(+22 files in other folders)
