[project]
name = "prod-ready-observability"
version = "0.1.0"
description = "Production-ready FastAPI service with observability hooks."
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "tenacity",
  "uvicorn",
  "cachetools",
]

[project.optional-dependencies]
test = ["pytest"]
